2013-10-27  Ian Beckwith  <ianb@erislabs.net>

	* surfraw.IN: w3_custom_search_google: don't give full path to surfraw.
	* pgdoc, wayback: fixed tests.

2013-10-20  Ian Beckwith  <ianb@erislabs.net>

	* new elvi: yacy: search using yacy p2p search.
	  -S searches ScienceNet, a yacy-based science search engine.
	* rae: fix url, remove -tipo option (no longer supported),
	  disable test as there is now gratuitous javascript.

2013-10-06  Ian Beckwith  <ianb@erislabs.net>

	* Replaced phpdoc with version posted back in
	  2011 by Jon Yamokoski <jon@jonyamo.net>
	  Thanks, and apologies for missing it!
	* S: add test.
	* Include debian packaging in upstream tarball.

2013-10-05  Ian Beckwith  <ianb@erislabs.net>

	* ask, cisco: fix elvi.
	* new elvi:
	  + oraclesearch - Replaces removed sunonesearch <sigh>.
	  + S - search using w3_custom_search.
	* google: -g for groups clashed with -g for graphical browser.
	  Invoke groups with -G, -gr, -groups or -search=groups.
	* mdn: site invokes google custom search via gratuitous
	  javascript, so switch to w3_custom_search.
	* alioth: changed test to SKIP:, works OK but won't talk
	  to LWP, hence test breaks.
	* discogs, openbsd: fixed tests.
	* mdn, mysqldoc, pgdoc, phpdoc: added tests.
	* w3_custom_search:
	  + document in README.
	  + remove documentation for ixquick support.
	    It still works(ish), but doesn't support enough features
	    to support (eg) mysqldoc -v=.
	  + add -custom-search= commandline option.
	* updated copyright years to 2013.

2013-09-30  Ian Beckwith  <ianb@erislabs.net>

	* new elvi: mdn, mysqldoc, pgdoc, phpdoc
	* new function: w3_custom_search
	  Is used by elvi that use a generic search engine with (eg) site:
	  or inurl: to narrow down the search.
	  Pass it -s=site -u=url for site: and inurl: args
	  plus the quoted search args
	* new environment variable: SURFRAW_customsearch_provider
	  to set provider used by w3_custom_search
	  can be set to: google, duckduckgo or ixquick.