@@ -1,4 +1,2 @@
-ads lightcurve
-The asteroid lightcurve database
-ads keplerian elements
-Equations for the Keplerian Elements: Hidden Symmetry
+ads rawlings adamson whittet
+extinction properties
