@@ -1,0 +1,4 @@
+gmane -l="gmane.os.openbsd.*" Raadt
+Theo
+gmane -L openbsd
+gmane.os.openbsd
