@@ -22,6 +22,7 @@ Sun Oct  6 02:17:09 BST 2013  - surfraw 2.2.9
           + cisco - search Cisco documentation
           + debcodesearch - search Debian codebase
           + github - search github
+          + gmane - search mailing lists
           + jquery - search jQuery documentation
           + mdn - search Mozilla Developer Network
           + mysqldoc - search MySQL documentation
@@ -40,7 +41,7 @@ Sun Oct  6 02:17:09 BST 2013  - surfraw 2.2.9
             * removed -p (clashes with global print option), use -safe instead
             * stopped -l[ucky] from clobbering -lh
           + google: changed -g option to -G to avoid clash with -g for graphical view
-        * Fixed elvi: ask, ctan, deli, genportage, jamendo, javasun,
+        * Fixed elvi: ask, ctan, deli, genportage, jamendo, javasun, openbsd
           musicbrainz, rae, slashdot, slinuxdoc
         * Removed elvi for dead sites: happypenguin, scroogle, sunonesearch (replaced by oraclesearch)
         * w3_custom_search
